replace music with store to increase visibility

--- a/store.html
+++ b/store.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <title>Psalm Full of Soul</title>
     <link href='css/music.css' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
   </head>
   <body>
     <div class="menu-bar">
@@ -23,7 +22,7 @@
               <li><a href="lena.html">Lena Seikaly</a></li>
               <li><a href="ramon.html">Ramón Tasat</a></li>
             </ul>
-          <li><a href="music.html">MUSIC</a></li>
+          <li><a href="store.html">STORE</a></li>
           <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
@@ -41,7 +40,7 @@
             <li><a href="ramon.html">Ramón Tasat</a></li>
           </ul>
         </li>
-        <li><a href="music.html">MUSIC</a></li>
+        <li><a href="store.html">STORE</a></li>
         <li><a href="contact.html">CONTACT</a></li>
       </ul>
       <div class="icon-bar">
@@ -60,7 +59,7 @@
       <img class="header-img" src="images/pfos-title.png"/>
     </div>
     <div class="page-title">
-      <h2>MUSIC</h2>
+      <h2>STORE</h2>
     </div>
     <div class="music-container">
       <div class="music-panel darker-panel">
