--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <title>Psalm Full of Soul</title>
     <link href='css/home.css' rel='stylesheet' type='text/css'>
@@ -22,6 +22,7 @@
               <li><a href="lena.html">Lena Seikaly</a></li>
               <li><a href="ramon.html">Ramón Tasat</a></li>
             </ul>
+          <li><a href="music.html">MUSIC</a></li>
           <li><a href="store.html">STORE</a></li>
           <li><a href="contact.html">CONTACT</a></li>
         </ul>
@@ -40,6 +41,7 @@
             <li><a href="ramon.html">Ramón Tasat</a></li>
           </ul>
         </li>
+        <li><a href="music.html">MUSIC</a></li>
         <li><a href="store.html">STORE</a></li>
         <li><a href="contact.html">CONTACT</a></li>
       </ul>
@@ -68,7 +70,7 @@
           </div>
           <div class="buttons">
             <div class="pfos-button left">
-              <a href="music.html">
+              <a href="store.html">
                 <img src="images/home/music-btn.png"/>
               </a>
             </div>
@@ -133,5 +135,17 @@
         </div>
       </div>
     </div>
+    
+        <div class="story">
+        _____________________
+       <center><i>World Premiere Concert!</i><br>
+		  The Psalm Full of Soul Project</span><br>
+         
+            New Album Release<br>
+        Sunday April 23, 2017 at <br>
+        <a href="http://bethesdabluesjazz.com" target="_blank">Bethesda Blues &amp; Jazz Supper Club</a><br>
+				Doors 5:30 Show 7PM<br>
+				for reserve ticket seating visit <a href="http://www.bbjlive.com" target="_blank">bbjlive.com</a> </center></span><br><br>
+		  </div>
   </body>
 </html>
