--- a/bboa.html
+++ b/bboa.html
@@ -22,6 +22,7 @@
               <li><a href="lena.html">Lena Seikaly</a></li>
               <li><a href="ramon.html">Ramón Tasat</a></li>
             </ul>
+          <li><a href="music.html">MUSIC</a></li>
           <li><a href="store.html">STORE</a></li>
           <li><a href="contact.html">CONTACT</a></li>
         </ul>
@@ -40,6 +41,7 @@
             <li><a href="ramon.html">Ramón Tasat</a></li>
           </ul>
         </li>
+        <li><a href="music.html">MUSIC</a></li>
         <li><a href="store.html">STORE</a></li>
         <li><a href="contact.html">CONTACT</a></li>
       </ul>
