--- a/ramon.html
+++ b/ramon.html
@@ -23,6 +23,7 @@
               <li><a href="lena.html">Lena Seikaly</a></li>
               <li><a href="ramon.html">Ramón Tasat</a></li>
             </ul>
+          <li><a href="music.html">MUSIC</a></li>
           <li><a href="store.html">STORE</a></li>
           <li><a href="contact.html">CONTACT</a></li>
         </ul>
@@ -41,6 +42,7 @@
             <li><a href="ramon.html">Ramón Tasat</a></li>
           </ul>
         </li>
+        <li><a href="music.html">MUSIC</a></li>
         <li><a href="store.html">STORE</a></li>
         <li><a href="contact.html">CONTACT</a></li>
       </ul>
